# multi-agent-system

./: README.md  pyproject.toml  requirements.txt
backend/: api.py  config.py  graph.py  main.py  nodes.py  schema.py  state.py  tools.py
frontend/: README.md
frontend/src/: App.css  App.jsx
frontend/src/api/: client.js
frontend/src/components/: ActivityLog.css  ActivityLog.jsx  HumanReview.css  HumanReview.jsx  IntelBrief.css  IntelBrief.jsx  QueryForm.css  QueryForm.jsx
frontend/src/styles/: global.css
